[package]
name = "ances-tree"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "TODO_DESCRIPTION"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/ances-tree"
homepage = "https://github.com/Tamschi/ances-tree/tree/v0.0.1"
documentation = "https://docs.rs/ances-tree/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/ances-tree" }
is-it-maintained-open-issues = { repository = "Tamschi/ances-tree" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
pin-project = "1.0.8"
tap = "1.0.1"
tiptoe = { features = ["sync"], version = "0.0.2" }

[features]
